# AI-Notes

./: .gitignore  2025-new.md  LICENSE  README.md  common_problem.md  ros_cmd.md  ros_study.md  常见问题解决.md  收集的有用博客.md  整理的有用博客.md
00 - Go 入门/: 从 0 学习 Go 语言 - 3 个入门学习网站.md
Beginner_Level/: 10、Creating a ROS msg and srv.md  12、Writing a Simple Service and Client (C++).md
CPP/: semantic_generator 整理的 C++ 用法.md
DataStructuresAndAlgorithms/: jeek_code.code-workspace  专题 1 - 时间与空间复杂度分析.md
DeepLearning/: Ubuntu GT1030 使用 CUDA.md  Ubuntu 安装深度学习环境.md  ubuntu install anaconda.md
English/: 英语六级复习方法.md
Gazebo/: GazeboStudy.md
ImageProcess/: DeepLabv3+ 阅读笔记.md
Intermediate Level/: 1、Creating a ROS package by hand.md  3、Roslaunch tips for large projects.md
Interview/: 2020-05-22-algorithm-book.md
KITTI/: Ubuntu Install kitti2bag.md  语义地图 KITTI 数据集选择.md
LidarImageFusion/PointCloudInterpolation/: CMakeLists.txt
LidarImageFusion/poisson_test/: CMakeLists.txt
MachineLearning/: Readme.md  从 0 开始机器学习 - 应用机器学习算法的一些建议.md  从 0 开始机器学习 - 机器学习系统的设计.md
Math/: 2020-05-09-bayes.md  2020-05-09-log-odds.md  2020-05-10-bayes-logit.md
NavigationPlanning/: Gazebo 八叉树导航工作计划.md  Jetson TX2 环境配置.md  ROS 机器人仿真 - Gazebo 仿真入门.md  ROS 机器人仿真 - 四轮小车 Gazebo 建模.md  ROS 机器人导航 - 学习过程中的收集的优质导航博客.md  ROS 机器人导航 - 导航框架学习笔记.md  ROS 机器人导航 - 配置 Gazebo ROS 小车自主导航过程.md  ROS 机器人技术 - Gazebo 入门笔记.md  ROS 机器人技术 - 在 Gazebo 中进行 SLAM 仿真.md  八叉树地图导航方法.md
NavigationPlanning/dlonng_ws/src/octomap_generator/: CMakeLists.txt  package.xml
NavigationPlanning/dlonng_ws/src/octomap_generator/include/octomap_generator/: octomap_generator.h  octomap_generator_ros.h
NavigationPlanning/dlonng_ws/src/octomap_generator/launch/: octomap_generator_mapping.launch
NavigationPlanning/dlonng_ws/src/octomap_generator/params/: octomap_generator.yaml
NavigationPlanning/dlonng_ws/src/octomap_generator/rviz/: octomap_generator_debug.rviz  python_octomap_generator_debug.rviz
NavigationPlanning/dlonng_ws/src/octomap_generator/src/octomap_generator/: octomap_generator.cpp  octomap_generator_ros.cpp
NavigationPlanning/dlonng_ws/src/octomap_server/: CMakeLists.txt  package.xml
NavigationPlanning/dlonng_ws/src/octomap_server/include/octomap_server/: OctomapServer.h
NavigationPlanning/dlonng_ws/src/octomap_server/launch/: dlonng_octomap_test.launch  kitti_octomap_server_start.launch  mini_gazebo_octomap_server_start.launch  mini_gazebo_octomap_server_start_build_map.launch  mini_gazebo_octomap_server_start_with_slam.launch  octomap_mapping.launch  octomap_server_mapping.launch  octomap_server_start.launch  octomap_tracking_client.launch
NavigationPlanning/dlonng_ws/src/octomap_server/rviz/: octomap_server_debug.rviz  test.rviz
NavigationPlanning/dlonng_ws/src/octomap_server/src/: OctomapServer.cpp
PCL/ch11/RandomSampleCon/: CMakeLists.txt  random_sc.cpp
PCL/ch12/normal_est/: CMakeLists.txt  normal_est.cc
PCL/ch14/seg_plan/: CMakeLists.txt  seg_plan.cpp
PCL/ch5/: CMakeLists.txt  kdtree_search.cc
PCL/ch6/detector/: CMakeLists.txt  detector.cc
PCL/ch6/search/: CMakeLists.txt  octree_search.cc
PCL/ch7/cloudview/: CMakeLists.txt  cloud_view.cc
PCL/ch8/SOR/: CMakeLists.txt  sor.cc
PCL/ch8/extract_indice/: CMakeLists.txt  extract_ind.cc
PCL/ch8/pass_through/: CMakeLists.txt  pass_through.cc
PCL/test_pcl/: CMakeLists.txt  test_pcl.cpp
PR2_Simulator/: 0.pr2_simulator_install.md  1_4.Teleop PR2 arm in simulation.md
PaperNote/: A CPU-GPU Hybrid System of Environment  Perception and 3D Terrain Reconstruction for  Unmanned Ground Vehicle.md  A perception pipeline forexpeditionary autonomous groundvehicles.md  国外地面无人系统感知框架.md  (+11 more)
ROS/ROSDebug/learning_debug.bak/: CMakeLists.txt  package.xml
ROS/ROSDebug/learning_debug.bak/src/: debug_test.cpp
SemanticMap/octomap_generator_ws/src/lidar_camera_fusion/: CMakeLists.txt
SemanticMap/octomap_generator_ws/src/lidar_camera_fusion/include/: lidar_camera_fusion.h
SemanticMap/octomap_generator_ws/src/lidar_camera_fusion/launch/: lidar_left_camera_fusion.launch  vscode_lidar_left_camera_fusion_debug.launch
SemanticMap/octomap_generator_ws/src/lidar_camera_fusion/src/: lidar_camera_fusion.cpp  main.cpp  origin_lidar_camera_fusion.cpp
SemanticMap/semantic_map_ws/src/calibration_publisher/: CMakeLists.txt  package.xml
SemanticMap/semantic_map_ws/src/calibration_publisher/docs/: ROS 机器人技术 - 解决 ROS_INFO 不能正确输出 string 的问题！.md
SemanticMap/semantic_map_ws/src/calibration_publisher/include/: calibration_publisher.h
SemanticMap/semantic_map_ws/src/calibration_publisher/src/: calibration_publisher.cpp
SemanticMap/semantic_map_ws/src/lidar_camera_fusion_pre/: CMakeLists.txt  package.xml
SemanticMap/semantic_map_ws/src/lidar_camera_fusion_pre/launch/: lidar_left_camera_fusion.launch
SensorFusion/LidarImageFusion/fusion_kitti/: CMakeLists.txt
SensorFusion/LidarImageFusion/fusion_kitti/data/: raw_cloud.pcd_32
SensorFusion/LidarImageFusion/fusion_kitti/data/calib/: 0000.txt
SensorFusion/fusion_ws/src/lidar_camera_fusion/: CMakeLists.txt  package.xml
SensorFusion/fusion_ws/src/lidar_camera_fusion/blog_docs/: ROS 工程安装缺少的依赖库.md
SensorFusion/fusion_ws/src/lidar_camera_fusion/include/: lidar_camera_fusion.h
SensorFusion/fusion_ws/src/lidar_camera_fusion/launch/: lidar_camera_fusion.launch  octomap_server_start.launch
SensorFusion/fusion_ws/src/lidar_camera_fusion/src/: .lidar_camera_fusion.cpp.swp  lidar_camera_fusion.cpp
SensorFusion/lidar_camera_fusion/: CMakeLists.txt  package.xml
SensorFusion/lidar_camera_fusion/blog_docs/: ROS 工程安装缺少的依赖库.md
SensorFusion/lidar_camera_fusion/include/: lidar_camera_fusion.h
SensorFusion/lidar_camera_fusion/launch/: lidar_camera_fusion.launch
SensorFusion/lidar_camera_fusion/src/: lidar_camera_fusion.cpp
VisionSLAM14/ch4/sophus_test/: CMakeLists.txt  use_sophus.cc
VisionSLAM14/ch5/: CMakeLists.txt  compile_commands.json  image_basics.cc
VisionSLAM14/ch5/JoinMap/: .a8bb87a12b46fcbc334f95866ab72bccc16eb6.cam  CMakeLists.txt  join_map  join_map.cc
VisionSLAM14/ch6/cere_curve_fitting/: CMakeLists.txt  cere_curve.cc
(+564 files in other folders)
